EPRC-135: Update initial spec to match proposed from architecture (#12)
* Change submissionYear -> registrationYear

* Add statuses query string to organisation search

* Change registration endpoints so they match the PUT organisations approach - a registration will be created or updated via a single PUT endpoint

* Enforce range on registration year
