# src/Api/Dtos/OrganisationSearchRequest.cs
@@ -12,7 +12,11 @@ public record OrganisationSearchRequest
     public RegistrationType[]? Registrations { get; init; } = [];
 
     [Description("Comma separated list of years")]
-    [FromQuery(Name = "submissionYears")]
+    [FromQuery(Name = "registrationYears")]
     [Range(2023, 2050)]
-    public int[]? SubmissionYears { get; init; } = [];
+    public int[]? RegistrationYears { get; init; } = [];
+
+    [Description("Comma separated list of registration statuses")]
+    [FromQuery(Name = "statuses")]
+    public RegistrationStatus[]? Statuses { get; init; } = [];
 }
