# src/Api/Endpoints/Organisations/Registrations/Put.cs
@@ -8,11 +8,12 @@ public static class Put
 {
     public static void MapRegistrationsPut(this IEndpointRouteBuilder app)
     {
-        app.MapPut("/organisations/{id:guid}/registrations/{type}-{submissionYear:int}", Handle)
-            .WithName("UpdateRegistration")
+        app.MapPut("/organisations/{id:guid}/registrations/{type}-{registrationYear:int}", Handle)
+            .WithName("CreateOrUpdateRegistration")
             .WithTags("Registrations")
-            .WithSummary("Update an existing registration")
+            .WithSummary("Create or update a registration")
             .Produces<Registration>()
+            .Produces<Registration>(statusCode: StatusCodes.Status201Created)
             .ProducesProblem(StatusCodes.Status400BadRequest)
             .ProducesProblem(StatusCodes.Status500InternalServerError)
             .RequireAuthorization(PolicyNames.Write);
@@ -22,19 +23,20 @@ public static class Put
     private static async Task<IResult> Handle(
         [FromRoute] Guid id,
         [FromRoute] RegistrationTypeFromRoute type,
-        [FromRoute] int submissionYear,
+        [FromRoute] int registrationYear,
         [FromBody] RegistrationRequest request,
         CancellationToken cancellationToken
     )
     {
         await Task.Yield();
 
-        return Results.Ok(
+        return Results.Created(
+            $"/organisations/{id}/registrations/{type}-{registrationYear}",
             new Registration
             {
                 Status = request.Status,
                 Type = type.RegistrationType,
-                SubmissionYear = submissionYear,
+                RegistrationYear = registrationYear,
             }
         );
     }
