# tests/Api.IntegrationTests/Endpoints/OpenApi/OpenApiTests.OpenApi_VerifyAsExpected.verified.json
@@ -32,7 +32,7 @@
             }
           },
           {
-            "name": "submissionYears",
+            "name": "registrationYears",
             "in": "query",
             "description": "Comma separated list of years",
             "schema": {
@@ -46,6 +46,17 @@
                   "string"
                 ],
                 "format": "int32"
+              }
+            }
+          },
+          {
+            "name": "statuses",
+            "in": "query",
+            "description": "Comma separated list of registration statuses",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/components/schemas/RegistrationStatus"
               }
             }
           }
@@ -208,91 +219,13 @@
         }
       }
     },
-    "/organisations/{id}/registrations/{type}-{submissionYear}": {
-      "post": {
-        "tags": [
-          "Registrations"
-        ],
-        "summary": "Create a new registration",
-        "operationId": "CreateRegistration",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "format": "uuid"
-            }
-          },
-          {
-            "name": "type",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "$ref": "#/components/schemas/RegistrationType"
-            }
-          },
-          {
-            "name": "submissionYear",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "pattern": "^-?(?:0|[1-9]\\d*)$",
-              "type": "integer",
-              "format": "int32"
-            }
-          }
-        ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/RegistrationRequest"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "201": {
-            "description": "Created",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Registration"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad Request",
-            "content": {
-              "application/problem+json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Internal Server Error",
-            "content": {
-              "application/problem+json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
-                }
-              }
-            }
-          }
-        }
-      },
+    "/organisations/{id}/registrations/{type}-{registrationYear}": {
       "put": {
         "tags": [
           "Registrations"
         ],
-        "summary": "Update an existing registration",
-        "operationId": "UpdateRegistration",
+        "summary": "Create or update a registration",
+        "operationId": "CreateOrUpdateRegistration",
         "parameters": [
           {
             "name": "id",
@@ -312,7 +245,7 @@
             }
           },
           {
-            "name": "submissionYear",
+            "name": "registrationYear",
             "in": "path",
             "required": true,
             "schema": {
@@ -335,6 +268,16 @@
         "responses": {
           "200": {
             "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Registration"
+                }
+              }
+            }
+          },
+          "201": {
+            "description": "Created",
             "content": {
               "application/json": {
                 "schema": {
@@ -390,7 +333,7 @@
             }
           },
           {
-            "name": "submissionYear",
+            "name": "registrationYear",
             "in": "path",
             "required": true,
             "schema": {
@@ -631,7 +574,9 @@
           "type": {
             "$ref": "#/components/schemas/RegistrationType"
           },
-          "submissionYear": {
+          "registrationYear": {
+            "maximum": 2050,
+            "minimum": 2023,
             "pattern": "^-?(?:0|[1-9]\\d*)$",
             "type": [
               "integer",
